구독 서비스: frequency IMMEDIATE 고정 및 상세조회 API 추가, ApiResponse 구조 수정